--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,22 @@
-backports.ssl-match-hostname==3.5.0.1
-chardet==2.2.1
-decorator==3.4.0
-docutils==0.11
-fail2ban==0.9.6
-gyp==0.1
-iniparse==0.4
-ipaddress==1.0.16
-kitchen==1.1.1
-Pillow==2.0.0
-pycurl==7.19.0
-pygobject==3.14.0
-pygpgme==0.3
-pyliblzma==0.5.3
-pyxattr==0.5.1
-slip==0.4.0
-slip.dbus==0.4.0
-urlgrabber==3.10
-virtualenv==15.1.0
-yum-metadata-parser==1.1.4
+alembic==1.0.5
+certifi==2018.11.29
+chardet==3.0.4
+Click==7.0
+Flask==1.0.2
+Flask-Cors==3.0.7
+Flask-Migrate==2.3.1
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.3.2
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10
+Mako==1.0.7
+MarkupSafe==1.1.0
+psycopg2==2.7.6.1
+python-dateutil==2.7.5
+python-editor==1.0.3
+requests==2.21.0
+six==1.12.0
+SQLAlchemy==1.2.15
+urllib3==1.24.1
+Werkzeug==0.14.1
